--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -31,7 +31,9 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     "tests/**/*.ts",
-    "tests/**/*.tsx"
+    "tests/**/*.tsx",
+
+    "src/typings/image.d.ts"
   ],
   "exclude": [
     "node_modules"
