--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,11 @@
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.5.1",
+    "chalk": "^4.1.0",
+    "class-transformer": "^0.3.2",
+    "class-validator": "^0.13.1",
+    "log4js": "^6.3.0",
+    "moment": "^2.29.1",
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
@@ -33,7 +38,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
-    "sequelize": "^6.5.0"
+    "sequelize": "^6.5.0",
+    "stacktrace-js": "^2.0.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
